# plonky2

./: .gitignore  Cargo.toml  notes-carry.md  notes-wasm.md  scratch
field/: Cargo.toml
field/src/: goldilocks_field.rs
plonky2/: .gitignore  Cargo.toml  test_32.sh  test_64.sh
plonky2/benches/allocator/: mod.rs
plonky2/examples/: fibonacci_dbg.rs
plonky2/src/batch_fri/: oracle.rs
plonky2/src/fri/: oracle.rs  prover.rs  witness_util.rs
plonky2/src/gadgets/: arithmetic.rs  arithmetic_extension.rs
plonky2/src/gates/: base_sum.rs
plonky2/src/hash/: hash_types.rs
plonky2/src/iop/: generator.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  prover.rs
plonky2/src/util/: context_tree.rs
plonky2/src/util/serialization/: mod.rs
wasm/: .gitignore  Cargo.toml  README.md  run.sh
wasm/src/: lib.rs
wasm/wat/: add.wat  mul.wat  mul_simd128.wat  mul_wasm32.wat  test.js
