[package]
name = "wasm-test"
description = "Test env for WASM"
version = "1.0.0"
edition = "2021"

[dependencies]
# Local dependencies
# plonky2_field = { version = "1.0.0", path = "../field", default-features = false }
# plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
# plonky2_util = { version = "1.0.0", path = "../util", default-features = false }
plonky2 = { version = "1.0.0", path = "../plonky2", default-features = false }

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.76", features = ["console", "Window", "Performance"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib"]
